--- a/src/index.css
+++ b/src/index.css
@@ -291,12 +291,26 @@ a {
 }
 
 #footer {
-  position: fixed;
-  bottom: 0;
-  left: 0;
+  position: absolute;
+  bottom: 75px;
+  width: 100%;
+  height: 60px;
 }
 
 footer img {
-  height: 70px;
-  width: 70px;
+  height: 75px;
+  width: 75px;
+  margin-left: 40px;
+  margin-right: 40px;
+}
+
+main {
+  margin-top: 25px;
+}
+.card-header {
+  color: var(--secondary)
+}
+
+.card a {
+  color: var(--tertiary)
 }
