--- a/src/index.css
+++ b/src/index.css
@@ -4,9 +4,10 @@ main {
   padding: 50px 30px;
 }
 :root {
-  --primary: #8c54ff;
-  --secondary: #f3a847;
-  --tertiary: #b12704;
+  --primary: #6DC0D5;
+  --secondary: #AF4D98;
+  --tertiary: #8cdfd6;
+  
   --light: #fafafa;
   --dark: #000000;
   --darker: #111111;
@@ -43,7 +44,6 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Roboto', sans-serif;
   font-weight: 500;
   margin: 5px 0;
   line-height: 1.25;
@@ -86,26 +86,11 @@ a {
 
 a:hover {
   text-decoration: underline;
-}
-
-header {
-  background: var(--dark);
+  color: var(--secondary);
 }
 
 header a {
   color: var(--light);
-}
-
-button {
-  font-size: 1rem;
-  text-decoration: none;
-  padding: 0.25rem 1rem;
-  border-radius: 0.5rem;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  margin: 0 1px;
-  background-color: var(--secondary);
 }
 
 button:hover {
@@ -126,7 +111,7 @@ span[role='img'] {
 }
 
 form {
-  width: 40%;
+  width: 50%;
 }
 
 input {
@@ -149,6 +134,7 @@ li {
 
 nav a:hover {
   text-decoration: none;
+  color: var(--tertiary);
 }
 
 nav li {
@@ -156,14 +142,14 @@ nav li {
 }
 
 textarea {
-  width: 600px;
+  width: 100%;
   height: 120px;
   border: 3px solid #cccccc;
   padding: 5px;
 }
 
 .container {
-  width: 85%;
+  width: 100%;
   max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
@@ -174,14 +160,6 @@ textarea {
   flex-wrap: wrap;
 }
 
-.space-between {
-  justify-content: space-between;
-}
-
-.flex-end {
-  justify-content: flex-end;
-}
-
 .mx-1 {
   margin-right: var(--spacing-one);
   margin-left: var(--spacing-one);
@@ -190,6 +168,7 @@ textarea {
 .mx-2 {
   margin-right: var(--spacing-two);
   margin-left: var(--spacing-two);
+  margin-top: 13px;
 }
 
 .my-1 {
@@ -227,44 +206,6 @@ textarea {
   padding-bottom: var(--spacing-two);
 }
 
-.card {
-  width: 25%;
-  text-align: center;
-}
-
-.img-thumbnail {
-  width: auto;
-  height: 300px;
-  margin-bottom: 50px;
-  cursor: pointer;
-}
-
-.modalBackdrop {
-  background: rgba(0, 0, 0, 0.65);
-  bottom: 0;
-  left: 0;
-  overflow: auto;
-  position: fixed;
-  right: 0;
-  top: 0;
-  z-index: 1;
-}
-
-.modalContainer {
-  background: var(--darker);
-  border-radius: 5px;
-  max-width: 100%;
-  margin: 50px auto;
-  padding: 15px;
-  width: 960px;
-}
-
-.modalTitle {
-  font-size: 18px;
-  font-weight: 600;
-  margin-bottom: 25px;
-}
-
 button {
   background: var(--primary);
   border: 0;
@@ -290,13 +231,6 @@ a {
   color: var(--secondary);
 }
 
-#footer {
-  position: absolute;
-  bottom: 75px;
-  width: 100%;
-  height: 60px;
-}
-
 footer img {
   height: 75px;
   width: 75px;
@@ -307,10 +241,36 @@ footer img {
 main {
   margin-top: 25px;
 }
-.card-header {
-  color: var(--secondary)
-}
 
 .card a {
   color: var(--tertiary)
+}
+
+.card a:hover {
+  color: var(--secondary);
+  text-decoration: none;
+}
+
+.card-body {
+  background-color: var(--primary);
+}
+
+.about-text {
+  margin-top: 30px;
+}
+
+.titles {
+  color: var(--primary);
+}
+
+.secondary-titles {
+  color: var(--secondary);
+}
+
+header {
+  background-color: var(--dark);
+}
+
+#home-a {
+  text-decoration: none;
 }
